@@ -6,7 +6,7 @@ php.date.timezone = "America/Montreal"
 
 ;change front controller properties
 front.default_controller = "indexController"
-front.allow_internal_controllers = false
+front.allow_internal_controllers = 0
 
 ;setup view engine, vars, etc...
 view.setRenderEngine = "Layouts"
