@@ -1,5 +1,8 @@
 #VERSION 0.8.3#
 
+ - renamed property $allow_internal_controller to plural in Peak_Controller_Front and fixed method _registryConfig() to force
+   boolean conversion for this property. 
+
  - deleted deprecated class Peak_Utils
 
  - fixed methods __construct() and __call() of Peak_Core to use getEnv() instead of deprecated constant DEV_MODE
